Fix 20px gap on left side of hallmark right

--- a/web/themes/custom/citizen_dart/components/03-composites/paragraphs/hallmark/_hallmark.scss
+++ b/web/themes/custom/citizen_dart/components/03-composites/paragraphs/hallmark/_hallmark.scss
@@ -161,7 +161,7 @@
     }//end left
     &.right{
       @include tab{
-        margin-left: 60px;
+        margin-left: 40px;
         .hallmark-image{
           right: auto;
           left: 0;
